Fix spacing on h3

--- a/web/css/websiteStyles2.css
+++ b/web/css/websiteStyles2.css
@@ -424,7 +424,7 @@ h2{
 .LansH3 {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size:16px;
-	margin: 20px 40px 5px 40px;
+	margin: 10px 40px 5px 40px;
 }
 
 .rules-link {
